<resources>
    <string name="app_name">BIDTrackerReports</string>
    <string name="action_settings">Settings</string>
    <string name="enroll">BID Reports</string>
    <string name="register_new_event">Register new event</string>
    <string name="registered_events">Registered events</string>
    <string name="register_relationship">Register relationship</string>
    <string name="new_event">New event</string>
    <string name="is">is</string>
    <string name="please_enter">Please enter</string>

    <string name="report_date">Report date</string>
    <string name="event_sent">Sent</string>
    <string name="event_offline">Offline</string>
    <string name="event_error">Error</string>

    <string name="error_401_description">Username or password has changed. Please log out and sign in again. \nNote! Event will be lost</string>
    <string name="error_408_description">Slow connection. Please, try to synchronize later</string>
    <string name="error_series_400_description">40x application level error.</string>
    <string name="error_series_500_description">50x server error. Please, try to synchronize later.</string>
    <string name="unknown_error">Unknown error</string>

    <string name="confirm_complete_enrollment">Are you sure you want to complete the current
        enrollment? No more editing will be possible.</string>
    <string name="confirm_terminate_enrollment">Are you sure you want to cancel the current
        enrollment? This cannot be undone.</string>
    <string name="confirm_delete_relationship">Are you sure you want to delete this relationship?</string>
    <string name="no_active_enrollment">No active enrollment</string>
    <string name="select_relationship_type">Select relationship type</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_vaccine"></string>
    <string name="nav_item_stock">Switch Back to BID Reports</string>
    <string name="nav_item_demand">Switch to Eventcapture App</string>
    <string name="nav_item_track">Switch to Trackercapture App</string>
    <!--<string name="nav_item_dash">Switch to Dashboard App</string>-->


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_vaccine</item>
        <item>@string/nav_item_stock</item>
        <item>@string/nav_item_demand</item>
        <item>@string/nav_item_track</item>
        <!--<item>@string/nav_item_dash</item>-->

    </string-array>

    <string name="title_home">Home</string>
    <string name="title_facility">Facility to do</string>
    <string name="title_vaccine">Vaccine Status</string>
    <string name="title_stock">Stock in hand</string>
    <string name="title_demand">Stock Demand Report</string>
    <string name="title_handvsdemand">Stock in Hand Vs Demand Report</string>
    <string name="title_district">District Level Stock</string>

    <string name="search">Search</string>
    <string name="http_error_400">Bad request</string>
    <string name="http_error_401">Unauthorized</string>
    <string name="http_error_403">Forbidden</string>
    <string name="http_error_409">Conflict</string>
    <string name="http_error_500">Internal server error</string>
    <string name="http_error_501">Not implemented</string>
    <string name="http_error_502">Bad gateway</string>
    <string name="http_error_503">Service unavailable</string>
    <string name="http_error_504">Gateway timed out</string>

    <string name="dialog_organisation_units_mode">Organisation units mode</string>
    <string name="dialog_programs_stage">Programs Stage</string>
    <string name="choose_organisation_unit_mode">Choose organisation mode</string>
    <string name="choose_program_stage">Choose program stage</string>
    <string-array name="organisation_mode">
        <item>SELECTED</item>
        <item>CHILDREN</item>
        <item>DESCENDANTS</item>
    </string-array>
    <string-array name="organisation_mode_id">
        <item>Y52YnK869WO</item>
        <item>lTqNF1rWha3</item>
        <item>CraSsUTG2aw</item>
    </string-array>
    <string name="generate_report">Generate report</string>

    <!-- DHIS2 -->
    <string name="btn_tracker_report">Tracker report</string>
    <string name="btn_today_report">Facility to do </string>
    <string name="btn_defaulter_list">Defaulter List </string>
    <string name="btn_dropout_list">Dropout List </string>
    <string name="btn_vaccine_report">Vaccine status</string>
    <string name="btn_birth_report">Birth Notifications</string>
    <string name="btn_bid_report">BID report</string>
    <string name="btn_stock_report">Stock report</string>
    <string name="btn_schedule_vaccine_report">Schedule Vaccine Report</string>
    <string name="btn_overdue_report">Dropout/Skipped Report</string>
    <string name="btn_stockinhand_report">Stock In Hand Report</string>
    <string name="btn_stockinhandvsdemand_report">Stock In Hand vs Demand Report</string>
    <string name="btn_defaulterlist_report">Defaulter List Report</string>
    <string name="btn_stockdemand_report">Stock Demand Report</string>

    <string name="hi_stock_report_no">S No</string>
    <string name="hi_stock_report_name">Name</string>
    <string name="hi_stock_report_value">Value</string>
    <string name="hi_stock_inhand_value">Inhand</string>
    <string name="hi_stock_demand_value">Demand</string>




</resources>
