<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnTrackerReport"
        style="@style/btnFragmentMain"
        android:text="@string/btn_tracker_report" />

    <Button
        android:id="@+id/btnBidReport"
        style="@style/btnFragmentMain"
        android:text="@string/btn_bid_report" />

    <Button
        android:id="@+id/btnStockReport"
        style="@style/btnFragmentMain"
        android:text="@string/btn_stock_report" />

    <Button
        android:id="@+id/btnSchvaccineReport"
        style="@style/btnFragmentMain"
        android:text="Schedule Vaccine Report" />
</LinearLayout>